# Vivid

./: .gitignore  CMakeLists.txt  README.md  config.h.in  doc.html
dependencies/VividFont/src/: font.cpp  font.h  main.cpp
dependencies/include/VividImage/: bitarray.h  image.h  node.h  tree.h
dependencies/libs/: CMakeLists.txt
dependencies/libs/VividImage/: CMakeLists.txt  bitarray.cpp  image.cpp  image.h  node.h  tree.cpp
dependencies/libs/glfw-3.1.2/: CMakeLists.txt
dependencies/libs/glfw-3.1.2/docs/: Doxyfile.in  input.dox  quick.dox  window.dox
dependencies/libs/glfw-3.1.2/docs/html/: glfw3_8h.html  glfw3_8h_source.html  group__buttons.html  group__input.html  input.html  modules.html  quick.html  window.html
dependencies/libs/glfw-3.1.2/examples/: particles.c
dependencies/libs/glfw-3.1.2/src/: input.c  window.c  winmm_joystick.c  winmm_joystick.h
dependencies/libs/glfw-3.1.2/tests/: joysticks.c
dependencies/libs/zlib-master/: inflate.c  inflate.h  zlib.h
dependencies/libs/zlib-master/contrib/infback9/: infback9.c  inftree9.c
dependencies/libs/zlib-master/contrib/inflate86/: inffas86.c
res/shaders/: simple.fs  simple.vs  simplelight.fs  simplelight.vs
src/: config.h  main.cpp  test.cpp
src/graphics/: shader.cpp  shader.h  window.cpp  window.h
src/vivid/: core.cpp  core.h  vivid.cpp  vivid.h
src/vivid/events/: event.h  keyEvent.h  mouseEvent.h  windowEvent.h
src/vivid/graphics/: batchrenderer2D.cpp  batchrenderer2D.h  font.cpp  font.h  quad.h  renderable2D.h  renderer2D.h  shader.cpp  shader.h  sprite.cpp  sprite.h  texture.cpp  texture.h  window.cpp  window.h
src/vivid/graphics/buffers/: buffer.cpp  buffer.h  buffers.h  indexbuffer.cpp  indexbuffer.h  vertexarray.cpp  vertexarray.h
src/vivid/input/: input.cpp  input.h
src/vivid/scenegraph/: Text.cpp  Text.h  camera.cpp  camera.h  gameobject.cpp  gameobject.h  layer.cpp  layer.h  scene.cpp  scene.h  sprite.cpp  sprite.h  textureatlas.cpp  textureatlas.h  transform.cpp  transform.h
src/vivid/util/: config.h  maths.cpp  maths.h  resource.cpp  resource.h  timer.h
src/vivid/util/maths/: maths.cpp  maths.h
